@@ -627,6 +627,9 @@
 
       \item \code{strtoi("", base)} now gives \code{NA} on all platforms,
       following its documentation.  Reported by Michael Chirico.
+
+      \item Prototype elements are now checked to match the slots of the
+      class. Reported by Bill Dunlap.
     }
   }
 }
